--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,11 +1,23 @@
+* {
+  font-family: Arial, Helvetica, sans-serif
+}
+
 html, body {
   height: 100%;
   margin: 0;
   padding: 0;
 }
 
-.save-note {
-  display: none;
+.navbar {
+  background-color: #654321;
+}
+
+.navbar-brand{
+  color: whitesmoke;
+}
+
+.navbar-brand:hover{
+  color: gray;
 }
 
 .icons i {
